Fix internal links for GitHub compatibility

--- a/Preprocessing and Sentiment Analysis.ipynb
+++ b/Preprocessing and Sentiment Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "5c6824e4-1bda-4433-9d55-e28800550bd5",
    "metadata": {},
    "source": [
-    "#### Preprocessing and Sentiment Analysis"
+    "### Preprocessing and Sentiment Analysis"
    ]
   },
   {
@@ -14,19 +14,21 @@
    "metadata": {},
    "source": [
     "---\n",
-    "###### Data Ingestion\n",
-    "######  - [Reading the data set](#Reading-the-data-set)\n",
-    "######  - [Preprocessing of the data](#Preprocessing-of-the-data)\n",
-    "###### Sentiment Analysis\n",
-    "######  - [Using Bing Liu Lexicon](#Using-Bing-Liu-Lexicon)\n",
-    "######  - [Using LM dictionary](#Using-LM-dictionary)\n",
-    "######  - [Using TextBlob](#Using-TextBlob)\n",
-    "######  - [Using Vader](#Using-Vader)\n",
-    "######  - [Using Obscene Words](#Using-Obscene-Words)\n",
-    "###### Output Extraction\n",
-    "######  - [Creating consolidated dataset](#Creating-consolidated-dataset)\n",
-    "######  - [Writing the dataset](#Writing-the-dataset)\n",
-    "---"
+    "#### Data Ingestion\n",
+    "- [Reading the data set](#reading-the-data-set)\n",
+    "- [Preprocessing of the data](#preprocessing-of-the-data)\n",
+    "\n",
+    "#### Sentiment Analysis\n",
+    "- [Using Bing Liu Lexicon](#using-bing-liu-lexicon)\n",
+    "- [Using LM dictionary](#using-lm-dictionary)\n",
+    "- [Using TextBlob](#using-textblob)\n",
+    "- [Using Vader](#using-vader)\n",
+    "- [Using Obscene Words](#using-obscene-words)\n",
+    "\n",
+    "#### Output Extraction\n",
+    "- [Creating consolidated dataset](#creating-consolidated-dataset)\n",
+    "- [Writing the dataset](#writing-the-dataset)\n",
+    "---\n"
    ]
   },
   {
@@ -35,7 +37,8 @@
    "metadata": {},
    "source": [
     "#### Reading the data set\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "\n",
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -464,7 +467,7 @@
    "metadata": {},
    "source": [
     "#### Preprocessing of the data\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -623,7 +626,7 @@
    "id": "363099f9-a3f4-41e6-8c67-01f83dce2ddb",
    "metadata": {},
    "source": [
-    "#### Sentiment Analysis"
+    "### Sentiment Analysis"
    ]
   },
   {
@@ -632,7 +635,7 @@
    "metadata": {},
    "source": [
     "#### Using Bing Liu Lexicon\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -667,7 +670,7 @@
    "metadata": {},
    "source": [
     "#### Using LM dictionary\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -700,7 +703,7 @@
    "metadata": {},
    "source": [
     "#### Using TextBlob\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -730,7 +733,7 @@
    "metadata": {},
    "source": [
     "#### Using Vader\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -754,7 +757,7 @@
    "metadata": {},
    "source": [
     "#### Using Obscene Words\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -784,7 +787,7 @@
    "metadata": {},
    "source": [
     "#### Creating consolidated dataset\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -845,7 +848,7 @@
    "metadata": {},
    "source": [
     "#### Writing the dataset\n",
-    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
+    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
    ]
   },
   {
@@ -912,14 +915,6 @@
     "write_data(series_3, 'processed_series_3.csv')\n",
     "write_data(series_4, 'processed_series_4.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "281f114c-3f8a-4b91-90d7-eed7fa64dd63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
