--- a/Similarity Indices.ipynb
+++ b/Similarity Indices.ipynb
@@ -5,7 +5,7 @@
    "id": "00506630-241a-413d-9cfd-ae1008a02f89",
    "metadata": {},
    "source": [
-    "#### Similarity Indices"
+    "### Similarity Indices"
    ]
   },
   {
@@ -14,12 +14,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "######  - [Reading the data set](#Reading-the-data-set)\n",
-    "######  - [Combining data for text similarity](#Combining-data-for-text-similarity)\n",
-    "######  - [Overall TFIDF Cosine Similarity](#Overall-TFIDF-Cosine-Similarity)\n",
-    "######  - [Pariwise TFIDF Cosine Similarity](#Pariwise-TFIDF-Cosine-Similarity)\n",
-    "######  - [Writing the dataset](#Writing-the-dataset)\n",
-    "---"
+    "#### Table of Contents\n",
+    "\n",
+    "- [Reading the data set](#reading-the-data-set)\n",
+    "- [Combining data for text similarity](#combining-data-for-text-similarity)\n",
+    "- [Overall TFIDF Cosine Similarity](#overall-tfidf-cosine-similarity)\n",
+    "- [Pariwise TFIDF Cosine Similarity](#pariwise-tfidf-cosine-similarity)\n",
+    "- [Writing the dataset](#writing-the-dataset)\n",
+    "---\n"
    ]
   },
   {
@@ -28,7 +30,8 @@
    "metadata": {},
    "source": [
     "#### Reading the data set\n",
-    "######  - [_Click here to move back to index_](#Similarity-Indices)"
+    "\n",
+    "######  - [_Click here to move back to index_](#similarity-indices)\n"
    ]
   },
   {
@@ -65,7 +68,7 @@
    "metadata": {},
    "source": [
     "#### Combining data for text similarity\n",
-    "######  - [_Click here to move back to index_](#Similarity-Indices)"
+    "######  - [_Click here to move back to index_](#similarity-indices)"
    ]
   },
   {
