Fix internal links for GitHub compatibility

--- a/Similarity Indices.ipynb
+++ b/Similarity Indices.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "source": [
     "#### Overall TFIDF Cosine Similarity\n",
-    "######  - [_Click here to move back to index_](#Similarity-Indices)"
+    "######  - [_Click here to move back to index_](#similarity-indices)"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "metadata": {},
    "source": [
     "#### Pariwise TFIDF Cosine Similarity\n",
-    "######  - [_Click here to move back to index_](#Similarity-Indices)"
+    "######  - [_Click here to move back to index_](#similarity-indices)"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "metadata": {},
    "source": [
     "#### Writing the dataset\n",
-    "######  - [_Click here to move back to index_](#Similarity-Indices)"
+    "######  - [_Click here to move back to index_](#similarity-indices)"
    ]
   },
   {
