Updated internal Markdown links and TOC

--- a/Preprocessing and Sentiment Analysis.ipynb
+++ b/Preprocessing and Sentiment Analysis.ipynb
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "id": "53c848cc-7ede-4412-a534-ecf89a9ef981",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('src')  #Use 'src' if it's in the same folder as the notebook\n"
+    "sys.path.append('src') \n"
    ]
   },
   {
