Updated notebooks and fixed TOC note

--- a/Preprocessing and Sentiment Analysis.ipynb
+++ b/Preprocessing and Sentiment Analysis.ipynb
@@ -10,25 +10,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2204cd1b-8d60-4e84-bdc4-b08f3afa8e4e",
+   "metadata": {},
+   "source": [
+    "> <sub>⚠️ **Note**: Internal links (like Table of Contents) work best when this notebook is opened in **Jupyter Notebook** or **nbviewer.org**.<br>\n",
+    "> GitHub does **not support scrolling to sections** inside `.ipynb` files.</sub>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc281c66-afbf-4525-8946-20643762e720",
    "metadata": {},
    "source": [
     "---\n",
-    "#### Data Ingestion\n",
-    "- [Reading the data set](#reading-the-data-set)\n",
-    "- [Preprocessing of the data](#preprocessing-of-the-data)\n",
-    "\n",
-    "#### Sentiment Analysis\n",
-    "- [Using Bing Liu Lexicon](#using-bing-liu-lexicon)\n",
-    "- [Using LM dictionary](#using-lm-dictionary)\n",
-    "- [Using TextBlob](#using-textblob)\n",
-    "- [Using Vader](#using-vader)\n",
-    "- [Using Obscene Words](#using-obscene-words)\n",
-    "\n",
-    "#### Output Extraction\n",
-    "- [Creating consolidated dataset](#creating-consolidated-dataset)\n",
-    "- [Writing the dataset](#writing-the-dataset)\n",
-    "---\n"
+    "###### Data Ingestion\n",
+    "######  - [Reading the data set](#Reading-the-data-set)\n",
+    "######  - [Preprocessing of the data](#Preprocessing-of-the-data)\n",
+    "###### Sentiment Analysis\n",
+    "######  - [Using Bing Liu Lexicon](#Using-Bing-Liu-Lexicon)\n",
+    "######  - [Using LM dictionary](#Using-LM-dictionary)\n",
+    "######  - [Using TextBlob](#Using-TextBlob)\n",
+    "######  - [Using Vader](#Using-Vader)\n",
+    "######  - [Using Obscene Words](#Using-Obscene-Words)\n",
+    "###### Output Extraction\n",
+    "######  - [Creating consolidated dataset](#Creating-consolidated-dataset)\n",
+    "######  - [Writing the dataset](#Writing-the-dataset)\n",
+    "---"
    ]
   },
   {
@@ -37,13 +44,12 @@
    "metadata": {},
    "source": [
     "#### Reading the data set\n",
-    "\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "53c848cc-7ede-4412-a534-ecf89a9ef981",
    "metadata": {},
    "outputs": [],
@@ -54,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "5282d9a5-825f-4143-b4bc-f0e74e3f9f26",
    "metadata": {},
    "outputs": [],
@@ -71,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "49f806c3-b48e-4cf0-9112-a75ef86935e5",
    "metadata": {},
    "outputs": [
@@ -169,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7b2fa04b-d5f4-40de-9776-e975ed9b985b",
    "metadata": {},
    "outputs": [
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "19c3fdae-7e90-400a-a4fd-b8204d9981cd",
    "metadata": {},
    "outputs": [
@@ -365,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "820b1991-b351-433d-8113-f9eb65cf87fe",
    "metadata": {},
    "outputs": [
@@ -467,12 +473,12 @@
    "metadata": {},
    "source": [
     "#### Preprocessing of the data\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "aef37116-c784-4b45-959d-1d7461ab02fd",
    "metadata": {},
    "outputs": [],
@@ -488,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "9b6fe8e0-c087-4404-87a0-0ba6ca63125b",
    "metadata": {},
    "outputs": [
@@ -635,12 +641,12 @@
    "metadata": {},
    "source": [
     "#### Using Bing Liu Lexicon\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "c0dcb5c3-9eb0-4bb5-8915-8f19976da8a1",
    "metadata": {},
    "outputs": [],
@@ -670,12 +676,12 @@
    "metadata": {},
    "source": [
     "#### Using LM dictionary\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "d997d763-a4db-460d-99f5-43cec9686143",
    "metadata": {},
    "outputs": [],
@@ -703,12 +709,12 @@
    "metadata": {},
    "source": [
     "#### Using TextBlob\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "01ecd74d-d82a-4382-af30-d939ccb22535",
    "metadata": {},
    "outputs": [],
@@ -733,12 +739,12 @@
    "metadata": {},
    "source": [
     "#### Using Vader\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "65f204fa-fb86-419d-9439-06a9df643194",
    "metadata": {},
    "outputs": [],
@@ -757,12 +763,12 @@
    "metadata": {},
    "source": [
     "#### Using Obscene Words\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "d4dce8a1-e9d6-49a1-9ddb-c934fcdcc7de",
    "metadata": {},
    "outputs": [],
@@ -787,12 +793,12 @@
    "metadata": {},
    "source": [
     "#### Creating consolidated dataset\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "6e38cbff-7653-4ef8-917d-67e8e6b00416",
    "metadata": {},
    "outputs": [],
@@ -818,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "e1878e0e-5bd7-410c-8c45-69ae1dc0ec83",
    "metadata": {},
    "outputs": [],
@@ -848,12 +854,12 @@
    "metadata": {},
    "source": [
     "#### Writing the dataset\n",
-    "######  - [_Click here to move back to index_](#preprocessing-and-sentiment-analysis)\n"
+    "######  - [_Click here to move back to index_](#Preprocessing-and-Sentiment-Analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "92f0208f-8c03-4cb3-9616-5e2d901298dd",
    "metadata": {},
    "outputs": [
@@ -884,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "25e8bd72-eb9b-459d-84be-c5820ba5f56f",
    "metadata": {},
    "outputs": [
