--- a/Similarity Indices.ipynb
+++ b/Similarity Indices.ipynb
@@ -10,18 +10,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c88254ec-57d9-40cd-a23d-7f11ff4b2689",
+   "metadata": {},
+   "source": [
+    "> <sub>⚠️ **Note**: Internal links (like Table of Contents) work best when this notebook is opened in **Jupyter Notebook** or **nbviewer.org**.<br>\n",
+    "> GitHub does **not support scrolling to sections** inside `.ipynb` files.</sub>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "95fa655a-bcd5-43e2-9d24-d2e9edc74332",
    "metadata": {},
    "source": [
     "---\n",
-    "#### Table of Contents\n",
-    "\n",
-    "- [Reading the data set](#reading-the-data-set)\n",
-    "- [Combining data for text similarity](#combining-data-for-text-similarity)\n",
-    "- [Overall TFIDF Cosine Similarity](#overall-tfidf-cosine-similarity)\n",
-    "- [Pariwise TFIDF Cosine Similarity](#pariwise-tfidf-cosine-similarity)\n",
-    "- [Writing the dataset](#writing-the-dataset)\n",
-    "---\n"
+    "######  - [Reading the data set](#Reading-the-data-set)\n",
+    "######  - [Combining data for text similarity](#Combining-data-for-text-similarity)\n",
+    "######  - [Overall TFIDF Cosine Similarity](#Overall-TFIDF-Cosine-Similarity)\n",
+    "######  - [Pariwise TFIDF Cosine Similarity](#Pariwise-TFIDF-Cosine-Similarity)\n",
+    "######  - [Writing the dataset](#Writing-the-dataset)\n",
+    "---"
    ]
   },
   {
@@ -30,13 +37,12 @@
    "metadata": {},
    "source": [
     "#### Reading the data set\n",
-    "\n",
-    "######  - [_Click here to move back to index_](#similarity-indices)\n"
+    "######  - [_Click here to move back to index_](#Similarity-Indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "6ce0b8a0-983c-49f3-82e7-440c19d0bd3f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "d3d7217f-ca01-4051-b76f-55cc62fd7e3a",
    "metadata": {},
    "outputs": [],
@@ -68,12 +74,12 @@
    "metadata": {},
    "source": [
     "#### Combining data for text similarity\n",
-    "######  - [_Click here to move back to index_](#similarity-indices)"
+    "######  - [_Click here to move back to index_](#Similarity-Indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "a9ddd203-6dee-44ea-be36-bcaa89d2592c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "1db6b73a-11e9-43a1-b0b6-f0f7523dc653",
    "metadata": {},
    "outputs": [
@@ -228,12 +234,12 @@
    "metadata": {},
    "source": [
     "#### Overall TFIDF Cosine Similarity\n",
-    "######  - [_Click here to move back to index_](#similarity-indices)"
+    "######  - [_Click here to move back to index_](#Similarity-Indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "0b5967da-2dc9-4694-a36f-ea41b84284af",
    "metadata": {},
    "outputs": [],
@@ -269,12 +275,12 @@
    "metadata": {},
    "source": [
     "#### Pariwise TFIDF Cosine Similarity\n",
-    "######  - [_Click here to move back to index_](#similarity-indices)"
+    "######  - [_Click here to move back to index_](#Similarity-Indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "f531c556-ba44-457b-ba3c-aa87ef355d5d",
    "metadata": {},
    "outputs": [],
@@ -320,12 +326,12 @@
    "metadata": {},
    "source": [
     "#### Writing the dataset\n",
-    "######  - [_Click here to move back to index_](#similarity-indices)"
+    "######  - [_Click here to move back to index_](#Similarity-Indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "160ca76a-ea05-49b2-b23d-8c0a0cffc013",
    "metadata": {},
    "outputs": [
